# mcguire-fastapi

./: .gitignore  Dockerfile  main.py  package-lock.json  package.json  render.yaml  requirements.txt  server.mjs
mcguire-step-cli/: CMakeLists.txt  main.cpp
mcguire-step-cli/examples/: test_cylinder.json
mcguire-step-cli/include/: obj_to_json.h  step_to_json.h  stl_to_json.h
mcguire-step-cli/src/: obj_to_json.cpp  step_to_json.cpp  stl_to_json.cpp
